fixed minor layout issues on homepage

--- a/src/pages/index-page/_manifesto.scss
+++ b/src/pages/index-page/_manifesto.scss
@@ -18,6 +18,7 @@
     left: 0;
     width: 15%;
     height: 100%;
+    max-height: 250px;
     background-size: contain;
     background-position: left top;
     background-repeat: no-repeat;
